src/test/contracts/negative/error_messages/type_ident_eq_lbrace_ident_comma_ident_colon_constr_type.religo
type z = { foo, bar: Cat dog